src/main/webapp/resources/css/header.css
@CHARSET "UTF-8";

body {
	margin: 0;
	background-color: #dbd1c2;
}

#logo {
	position: relative;
	top: -65px;
	z-index: 10;
	background-image: url(../images/logo.png);
	width: 200px;
	height: 200px;
}

#nav-wrapper {
	background-color: #85150f;
	width: 100%;
	height: 100px;
	margin-top: 50px;
	font-family: 'Indie Flower';
	font-weight: bold;
	font-size: 15pt;
}

#nav {
	background-color: #85150f;
	border: none;
}

#navbar {
	margin-top: 25px;
	margin-left: -15px;
	border: none;
}

#navbar a {
	color: #dbd1c2;
}
	#navbar a:hover {
		color: #e9500e;
	}
	
.dropdown-menu {
	background: #85150f;
}

.dropdown-header {
	color: #db6836;
}

.navbar-brand {
	height: 75px;
}

@media (max-width: 1200px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin-top: 7.5px;
    }
    .navbar-nav>li {
        float: none;        
    }
    #home {
    	margin-top: 30px;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
        display:block !important;
    }
}

